# sdlc

./: .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KEYS.md  LICENSE  Makefile  README.md  SECURITY.md  action.yml  privacy.md  pyproject.toml  requirements.txt  rust-toolchain.toml
.claude/: settings.json
.codex/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.sdlc/: pipeline.json
artifacts/: sbom.cdx.json
docs/: 12_AGENT_PARALLELISM.md  DEMO.md  EVIDENCE.md  FEATURE_GATE_MAP.md  HANDS_ON_ADVISORY_USAGE.md  INTERFACE_CONTROLS.md  PIPELINE.md  PRODUCTION_GRADE_COMPLETION_PROMPT.md  PRODUCT_SPEC.md  RED_TEAM_GO_REMEDIATION_PROMPT.md  RED_TEAM_STANDARD.md  RELEASE_PROCESS.md  ROLLBACK.md  RUST_MIGRATION_PLAN.md  SCREENCAST.md  SESSION_AUDIT_PROMPT.md  USAGE.md  WHAT_WE_WERE_MISSING.md  WHY_THIS_TOOL.md  WORLD_CLASS_CONTROL_PLANE_PROMPT.md  index.html
scripts/: capture_usage.sh  demo.sh  gen_sbom.py  production_readiness.sh  smoke.sh
sdlc/: __init__.py  adapters.py  agents.py  attestations.py  audit_runtime.py  bench.py  briefing.py  classifier.py  cli.py  dashboard.py  deploy.py  diff.py  engine.py  evidence.py  fibonacci.py  learn.py  ledger.py  memory.py  models.py  pipeline.py  policies.py  prompts.py  release.py  reporting.py  scanners.py  usage.py  util.py  validation.py
src/: engine.rs  lib.rs  main.rs  models.rs  pipeline.rs
tests/: parity_final_verdict.rs  parity_models.rs  parity_pipeline.rs  test_bench.py  test_core.py  test_dashboard.py  test_diff.py  test_fibonacci.py  (+5 more)
(+38 files in other folders)
